phonetics - take you to a new page to hear how the word is pronounced

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ black - #46494C
 blue - #4C5C68
 */
 body {
-  background: #eeecec;
+  background: #EEECEC;
   color: #46494c;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 22px;
