--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,15 @@ black - #46494C
 blue - #4C5C68
 */
 body {
-  background: #EEECEC;
-  color: #46494c;
+  background:#EEECEC;
+  color: #46494C;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 22px;
+}
+
+a {
+  color: #4C5C68;
+}
+a:hover {
+  color: #6D7983;
 }
