--- a/src/Phonetic.css
+++ b/src/Phonetic.css
@@ -1,8 +1,11 @@
+.Phonetic {
+  padding-bottom: 15px;;
+}
 .fa-play-circle {
   font-size: 30px;
   margin-right: 15px;
-  color: #46494C;
+  color: #EEECEC;
 }
 .fa-play-circle:hover {
-  color: #6D7983;
+  color: #6D7B84;
 }
