--- a/src/Phonetic.css
+++ b/src/Phonetic.css
@@ -4,8 +4,8 @@
 .fa-play-circle {
   font-size: 30px;
   margin-right: 15px;
-  color: #EEECEC;
+  color: #4C5C68;
 }
 .fa-play-circle:hover {
-  color: #6D7B84;
+  color: #CBCFD2;
 }
