--- a/src/Synonyms.css
+++ b/src/Synonyms.css
@@ -1,12 +1,8 @@
-.Synonyms {
-    margin: 0;
-}
 ul {
   list-style: none;
-  padding: 0;
-  word-break: break-word;
+  padding: 30px 0 0 0;
 }
 li {
-  display: inline;
-  margin: 5px;
+  display: inline-block;
+  margin-left: 5px;
 }
